--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/themes": "^3.1.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.0.1",
 		"styled-components": "^6.1.13"
 	},
 	"devDependencies": {
