--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 		"@radix-ui/themes": "^3.1.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^7.0.1",
-		"styled-components": "^6.1.13"
+		"react-router-dom": "^7.0.2",
+		"styled-components": "^6.1.13",
+		"uuid": "^11.0.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
