--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@radix-ui/themes": "^3.1.6",
 		"firebase": "^11.0.2",
+		"nookies": "^2.5.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.0.2",
